--- a/EspaceCandiat/Views/Home/Offre.cshtml
+++ b/EspaceCandiat/Views/Home/Offre.cshtml
@@ -1,99 +1,108 @@
 ﻿@{
-    ViewData["Title"] = "Nos Offres";
+    ViewData["Title"] = "Postuler";
 }
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-	<div class="col-sm-6 col-sm-offset-3 form-box">
+<div class="col-8 mx-auto">
+    <ul class="form-stepper form-stepper-horizontal text-center mx-auto pl-0">
+        <!-- Step 1 -->
+        <li class="form-stepper-active text-center form-stepper-list" step="1">
+            <a class="mx-2">
+                <span class="form-stepper-circle">
+                    <span>1</span>
+                </span>
+                <div class="label">Informations</div>
+            </a>
+        </li>
+        <!-- Step 2 -->
+        <li class="form-stepper-unfinished text-center form-stepper-list" step="2">
+            <a class="mx-2">
+                <span class="form-stepper-circle text-muted">
+                    <span>2</span>
+                </span>
+                <div class="label text-muted">CV</div>
+            </a>
+        </li>
+        <!-- Step 3 -->
+        <li class="form-stepper-unfinished text-center form-stepper-list" step="3">
+            <a class="mx-2">
+                <span class="form-stepper-circle text-muted">
+                    <span>3</span>
+                </span>
+                <div class="label text-muted">Confirmation</div>
+            </a>
+        </li>
+    </ul>
+  
 
-		<form role="form" action="" method="post" class="registration-form">
+    <form id="ApplyFromStep" name="ApplyFromStep" enctype="multipart/form-data" method="POST">
+        @Html.AntiForgeryToken()
+        <!-- Step 1 Content-->
+        <section id="step-1" class="form-step">
+            <div class="container">
+                <h2>Candidature</h2>
+                    <div class="form-group">
+                        <label for="nom">Nom:</label>
+                        <input type="text" class="form-control" id="nom" placeholder="Entrez votre nom" name="nom">
+                    </div>
+                    <div class="form-group">
+                        <label for="prenom">Prénom:</label>
+                        <input type="text" class="form-control" id="prenom" placeholder="Entrez votre prénom" name="prenom">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Entrez votre email" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="tel">Téléphone:</label>
+                        <input type="tel" class="form-control" id="tel" placeholder="Entrez votre numéro de téléphone" name="telephone">
+                    </div>
+                    <div class="form-group">
+                        <label for="etude">Niveau d'étude:</label>
+                    <select class="form-control" id="etude" name="niveauetude">
+                            <option>Bac</option>
+                            <option>Bac +2</option>
+                            <option>Bac +3</option>
+                            <option>Bac +5</option>
+                            <option>Doctorat</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="experience">Nombre d'années d'expérience:</label>
+                    <input type="number" class="form-control" id="experience" placeholder="Entrez votre nombre d'années d'expérience" name="anneesexperience">
+                    </div>
+                    <div class="form-group">
+                        <label for="employeur">Dernier employeur:</label>
+                    <input type="text" class="form-control" id="employeur" placeholder="Entrez le nom de votre dernier employeur" name="dernieremployeur">
+                    </div>
+            </div>
 
-			<fieldset>
-				<div class="form-top">
-					<div class="form-top-left">
-						<h3>Step 1 / 3</h3>
-						<p>Tell us who you are:</p>
-					</div>
-					<div class="form-top-right">
-						<i class="fa fa-user"></i>
-					</div>
-				</div>
-				<div class="form-bottom">
-					<div class="form-group">
-						<label class="sr-only" for="form-first-name">First name</label>
-						<input type="text" name="form-first-name" placeholder="First name..." class="form-first-name form-control" id="form-first-name">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-last-name">Last name</label>
-						<input type="text" name="form-last-name" placeholder="Last name..." class="form-last-name form-control" id="form-last-name">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-about-yourself">About yourself</label>
-						<textarea name="form-about-yourself" placeholder="About yourself..."
-								  class="form-about-yourself form-control" id="form-about-yourself"></textarea>
-					</div>
-					<button type="button" class="btn btn-next">Next</button>
-				</div>
-			</fieldset>
+            <div class="mt-3">
+                <button class="button btn-navigate-form-step" type="button" step_number="2">Next</button>
+            </div>
+        </section>
+        <!-- Step 2 Content-->
+        <section id="step-2" class="form-step d-none">
+            <div class="form-group">
+                <label for="cv">Téléchargez votre CV:</label>
+                <input type="file" class="form-control-file" id="cv" name="cv" accept=".pdf,.jpeg,.jpg,.png">
+            </div>
+            <div class="mt-3">
+                <button class="button btn-navigate-form-step" type="button" step_number="1">Prev</button>
+                <button class="button btn-navigate-form-step" type="button" step_number="3">Next</button>
+            </div>
+        </section>
+        <!-- Step 3 Content-->
+        <section id="step-3" class="form-step d-none">
+            <h2 class="font-normal">Confimation</h2>
 
-			<fieldset>
-				<div class="form-top">
-					<div class="form-top-left">
-						<h3>Step 2 / 3</h3>
-						<p>Set up your account:</p>
-					</div>
-					<div class="form-top-right">
-						<i class="fa fa-key"></i>
-					</div>
-				</div>
-				<div class="form-bottom">
-					<div class="form-group">
-						<label class="sr-only" for="form-email">Email</label>
-						<input type="text" name="form-email" placeholder="Email..." class="form-email form-control" id="form-email">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-password">Password</label>
-						<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-repeat-password">Repeat password</label>
-						<input type="password" name="form-repeat-password" placeholder="Repeat password..."
-							   class="form-repeat-password form-control" id="form-repeat-password">
-					</div>
-					<button type="button" class="btn btn-previous">Previous</button>
-					<button type="button" class="btn btn-next">Next</button>
-				</div>
-			</fieldset>
+            <div class="mt-3" id="message"></div>
 
-			<fieldset>
-				<div class="form-top">
-					<div class="form-top-left">
-						<h3>Step 3 / 3</h3>
-						<p>Social media profiles:</p>
-					</div>
-					<div class="form-top-right">
-						<i class="fa fa-twitter"></i>
-					</div>
-				</div>
-				<div class="form-bottom">
-					<div class="form-group">
-						<label class="sr-only" for="form-facebook">Facebook</label>
-						<input type="text" name="form-facebook" placeholder="Facebook..." class="form-facebook form-control" id="form-facebook">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-twitter">Twitter</label>
-						<input type="text" name="form-twitter" placeholder="Twitter..." class="form-twitter form-control" id="form-twitter">
-					</div>
-					<div class="form-group">
-						<label class="sr-only" for="form-google-plus">Google plus</label>
-						<input type="text" name="form-google-plus" placeholder="Google plus..." class="form-google-plus form-control" id="form-google-plus">
-					</div>
-					<button type="button" class="btn btn-previous">Previous</button>
-					<button type="submit" class="btn">Sign me up!</button>
-				</div>
-			</fieldset>
-
-		</form>
-
-	</div>
+            <div class="mt-3">
+                <button class="button btn-navigate-form-step" type="button" step_number="2">Prev</button>
+                <button class="button submit-btn" id="submitForm" type="submit">Save</button>
+            </div>
+        </section>
+    </form>
 </div>
+
